--- a/index.html
+++ b/index.html
@@ -1,259 +1,2 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>NBR-Portfolio</title>
-</head>
-<h2 class="z" style="text-align: left;">PORTFOLIO</h2>
-<style>
-h2.z{
-    color: white;
-    height: 50px;
-    border: solid;
-    border-color: rgb(0, 0, 0);
-    border-radius: 3px;
-    font-size: x-large;
-    background-color: rgb(16, 10, 51);
-    font-style: italic;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-</style>
-<body style="background-color: #59aedbda;"></body>
-<header style="color: rgb(255, 255, 255);">About Me</header>
-<div class="back" style="color: rgb(0, 0, 0);">Hi, I'm Nick (Paradox0xy). I'm currently 17 and have been working for about 4 years now in the Roblox developer industry (4 years in building, about 1 and one half of a year in modeling). My main proficiencies include building and modeling at the moment; however, I am also currently studying and dabbling in scripting, web design, and a bit of animating. 
- Aside from my work as a Roblox developer, I am also studying and taking courses on how to be a future IT systems admin. I hope to someday make a career of it as I'm sort of a big fan of this 
- tech stuff. In addition to my career, some soft skills I have include leadership, communication, and responsibility. Outside of my work and studies, you can probably catch me around playing one of my favorite sports, soccer/Fútbol or hanging out with friends.   
-</div>
-<style>
-    div.back{
-        border-radius: 10px;
-        background-color: gray;
-        margin-left: 50px;
-        margin-right: 50px;
-       border: solid;
-        border-color: black;
-        font-size: large;
-    }
-</style>
-<style>
-header{
-text-align: center;
-font-size: larger;
-margin-bottom: 10px;
-background-color: rgb(0, 0, 0);
-margin-left: 50px;
-margin-right: 50px;
-}
-</style>
-
-<div class="LOP" style="color: rgb(255, 255, 255);">Work</div>
-<p2 style="color: rgb(0, 0, 0);">h</p2>
-<style>
-div.LOP{text-align: center;
-font-size: larger;
-background-color: black;
-margin-left: 50px;
-margin-right: 50px;
-margin-top: 10px;}
-</style>
-<div class="Alpha"><p style="color: rgb(255, 255, 255);">Certifications and Awards</p></div>
-<p2 style="color: rgb(0, 0, 0);">Below me are some milestons I've hit on my life's journey from the biggest to the smallest. (Yes, this would include the one time I placed 2nd in a 7th grade Spelling Bee)...</p2>
-<style>
-div.Alpha{
-text-align: center;
-font-size: larger;
-background-color: rgb(0, 0, 0);
-margin-left: 50px;
-margin-right: 50px;
-}
-</style>
-<style>
-  p2{
-    margin-left: 50px;
-    font-size: large;
-  }
-</style>
-<div class="responsive">
-    <div class="gallery">
-      <a target="_blank" href="Screenshot (300).png">
-        <img src="Screenshot (300).png" height="500" width="500" alt="Cinque Terre">
-      </a>
-      <div class="desc" style="background-color: rgb(69, 135, 197);">This certificate was earned for completing an online course that taught the fundamentals of the coding language, Lua.</div>
-    </div>
-  </div>
-<style>
-  div.desc{
-    margin-left: 0px;
-border-left-style: solid;
-border-top-style: solid;
-border-color: rgb(0, 0, 0);
-margin-top: 10px;
-margin-bottom: 10px;
-border-radius: 5px;
-text-align: center;
-border-left-width: 6px;
-font-size: large;
-  }</style>
- 
- <div class="gallery">
-    <a target="_blank" href="Screenshot (299).png">
-      <img src="Screenshot (299).png" alt="Forest" width="500" height="500">
-    </a>
-    <div class="desc" style="background-color: rgb(69, 135, 197);">This certificate was earned for completing an online course which taught the basics of Debian Linux.</div>
-  </div>
-<style>
-div.gallery{
-   margin: 5px;
-   margin-left: 50px;
-    float: left;
-    }
-</style>
-<div class="branch">
-  <a target="_blank" href="https://discord.gg/3dgSZuxx4p">
-    <img src="discord.webp" alt="Forest" width="50" height="50">
-  </a>
-</div>
-<style>
-  div.branch{
-    position: absolute;
-    right: 50px;
-    top: 25px;
-  }
-</style>
-<div class="Roblox">
-  <a target="_blank" href="https://www.roblox.com/users/1603419401/profile">
-    <img src="roblox.png" alt="Forest" width="35" height="35">
-  </a>
-</div>
-<style>
-  div.Roblox{
-    position: absolute;
-    right: 100px;
-    top: 32px;
-  }
-</style>
-
-<a href="comment.html">
-  <button>Send a review!</button>
-</a>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Comment Box</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="styles.css" />
-    <style>
-        div.form-group1 {
-            background-color: blueviolet;
-        }
-        .comments {
-            margin-top: 20px;
-            max-height: 300px; /* Set a max height for the scrollable area */
-            overflow-y: auto; /* Enable vertical scrolling */
-            border: 1px solid #ccc; /* Optional: border for the comments section */
-            padding: 10px; /* Optional: padding for better appearance */
-        }
-        .comment {
-            border: 1px solid #ccc;
-            margin-bottom: 10px;
-            padding: 10px;
-            border-radius: 5px;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="comment-box gradient-bg">
-            <h2 class="comment-title">Join the conversation</h2>
-            <form id="commentForm">
-                <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" placeholder="Enter your name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
-                </div>
-                <div class="form-group1">
-                    <label for="comment">Comment:</label>
-                    <textarea id="comment" name="comment" placeholder="Type your comment here" required></textarea>
-                </div>
-                <button type="submit" class="btn-submit">Submit</button>
-            </form>
-            <div class="comments" id="commentsSection"></div>
-        </div>
-    </div>
-    
-    <script>
-        const form = document.getElementById('commentForm');
-        const commentsSection = document.getElementById('commentsSection');
-        const apiUrl = '/comments'; // Use relative path for the API
-
-        // Load comments from the server
-        async function loadComments() {
-            const response = await fetch(apiUrl);
-            const comments = await response.json();
-            comments.forEach(comment => {
-                displayComment(comment.name, comment.comment);
-            });
-        }
-
-        // Display a single comment
-        function displayComment(name, comment) {
-            const commentDiv = document.createElement('div');
-            commentDiv.classList.add('comment');
-            commentDiv.innerHTML = `<strong>${name}</strong>: <p>${comment}</p>`;
-            commentsSection.appendChild(commentDiv);
-        }
-
-        form.addEventListener('submit', async function(event) {
-            event.preventDefault();
-
-            const name = document.getElementById('name').value;
-            const comment = document.getElementById('comment').value;
-            const email = document.getElementById('email').value;
-
-            // Post the comment to the server
-            await fetch(apiUrl, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ name, email, comment }),
-            });
-
-            // Display the new comment
-            displayComment(name, comment);
-
-            // Clear the form
-            form.reset();
-        });
-
-        // Load comments on page load
-        loadComments();
-    </script>
-</body>
-</html>
-<style>
-  div.container{
-    background-color: gray;
-    position: relative;
-    bottom: -100px;
-  }
-  h2.comment-title{
-    text-align: left;
-    margin-top: 20px;
-    margin-left: 0;
-    margin-right: 0px;
-    color: white;
-    height: 50px;
-    border: solid;
-    border-color: rgb(0, 0, 0);
-    border-radius: 3px;
-    font-size: x-large;
-    background-color: rgb(16, 10, 51);
-    font-style: italic;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  }
-</style>
+<body style="background-color: rgb(143, 88, 194);"></body>
