--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <body style="background-color: rgb(143, 88, 194);">
-    <head><img src="gfx.JPEG" height=100px width="100%"></head>
+    <head><img src="gfx.JPEG" height=100px width="auto"></head>
 </body>
