--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <body style="background-color: rgb(143, 88, 194);">
-    <head><img src="gfx.JPEG" height=100% max-width=100%></head>
+    <head><img src="gfx.JPEG" height=100% max-width=1080px></head>
 <style>
     img{
         object-fit: contain;
