--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <body style="background-color: rgb(143, 88, 194);">
-    <head><img src="gfx.JPEG" height=100% max-width=1080px></head>
+    <head><ef src="gfx.JPEG"></head>
 <style>
     img{
+        height: auto;
+        max-width: 1080px;
         object-fit: contain;
     }
 </style>
