--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <body style="background-color: rgb(143, 88, 194);">
-    <head><ef src="gfx.JPEG"></head>
+    <div class="a">
+    <head><img src="gfx.JPEG"></head>
+    </div>
 <style>
-    img{
+   .a{
         height: auto;
         max-width: 1080px;
         object-fit: contain;
     }
 </style>
 </body>
-
