--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
    .a{
         height: auto;
         max-width: 1080px;
-        object-fit: contain;
+        object-fit:fill;
     }
 </style>
 </body>
+
