--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 <style>
    .a{
         height: auto;
-        max-width: 1080px;
+        max-width: 100%;
         object-fit:fill;
     }
 </style>
 </body>
-
