--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     </div>
 <style>
    .a{
-        height: auto;
+        max-height: 150px;
         width: 100%;
-        object-fit:fill;
+        object-fit:cover;
     }
 </style>
 </body>
+
