--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head><img src="gfx.JPEG"></head>
     </div>
 <style>
-   a.img{
+  img{
         max-height: 150px;
         width: 100%;
         object-fit:cover;
