--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <head><img src="gfx.JPEG"></head>
     </div>
 <style>
+  a{
+    width: 100%;
+    max-height: 150px;
+    overflow: hidden;
+  }
   img{
-        max-height: 150px;
+        height: 100%;
         width: 100%;
         object-fit:cover;
         display: block;
     }
 </style>
 </body>
-
