--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <body style="background-color: rgb(143, 88, 194);">
     <div class="a">
-    <head><img src="gfx.JPEG"></head>
+    <head><img src="gfx.JPEG" class="b"></head>
     </div>
 <style>
-  a{
+  .a{
     width: 100%;
     max-height: 150px;
     overflow: hidden;
   }
-  img{
+  .b{
         height: 100%;
         width: 100%;
         object-fit:cover;
