--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     overflow: hidden;
   }
   .b{
-        height: 100%;
+        height: 50px;
         width: 100%;
         object-fit:cover;
         display: block;
